static/css/style.css
/* ... */
/*-----------------------------------------TABLET MEDIA QUERY-----------------------------------------*/
/*------------------------------BASE.HTML-------------------------------*/
@media only screen and (max-width: 1025px){
    #lotr-background{
        background-size: 135%;
        background-position-x: -200px;
    }

    .calendar-image{
    margin-bottom: 4px;
}

.mobile-pagination{
    display: none;
}

.film-card{
    width:40%;
}
}

/*-----------------------------------------TABLET LANDSCAPE MEDIA QUERY-----------------------------------------*/
@media only screen and (max-height: 1025px) and (max-width: 800px){
#lotr-background{
    background-size:240%;
    background-position-x: -800px;
    background-position-y: 50px;
}

.sidenav{
    background-color: #182F1A;
}

.sidenav li > a{
    color: #DCAE0B;
}

.modal-card{
    width: 90%;
    max-height: 60%;
    overflow: scroll;
}

#searching-nav {
    padding: 10px 25% 0;
}

.pagination{
    width: 20%;
    display: flex;
    justify-content: center;
}
}

/*-----------------------------------------PHONE PORTRAIT MEDIA QUERY-----------------------------------------*/
/*------------------------------BASE.HTML-------------------------------*/
@media only screen and (max-width: 450px){
#logo{
    margin-left: 0;
}

.sidenav{
    background-color: #182f1a;
}

.sidenav li > a{
    color: #DCAE0B;
}

.addmovie-container{
    width: 70%;
}

.footer-span{
    display: none;
}
/*------------------------------INDEX.HTML-------------------------------*/
#lotr-background{
    background-size:400%;
    background-position-x: -900px;
    background-position-y: 0px;
}

#month{
    min-width: 240px;
}

#month h1{
    font-size: 3em;
}

.fa-chevron-left{
    margin-top: 15px;
    margin-right: 10px;
}

.fa-chevron-right{
    margin-top: 15px;
    margin-left: 10px;
}

.calendar-image{
    margin-left: 1px;
    width: 90%;
    min-height: 50px;
    margin-bottom: 2px;
}

/*------------------------------ADDMOVIE.HTML-------------------------------*/
#add-movie-form{
    overflow: scroll;
}

#add-more, #submit{
    width: 130px;
}

#date-format{
    display: none;
}
/*------------------------------FILMS.HTML-------------------------------*/
.film-card{
    width:100%;
}

.pagination{
    width: inherit;
}

#search-form{
    width: 50%;
}

#searching-nav{
    padding: 10px 3% 0;
}

.mobile-pagination{
    display: flex;
    justify-content: center;
}

.modal-card{
    width: 90%;
    max-height: 60%;
    display: block;
    overflow: scroll;
}

#poster-side{
    min-width: 100%;  
    padding-top: 10px;
}

#expanded-poster-box{
    min-width: 100%;
}

#expanded-card-image{
    max-width: 40%;
    margin-left: 30%;
    min-height: 165px;
}

.change-box{
    width: 90%;
    margin-left: 5%;
}

#info-side{
    padding-top: 0;
}

#confirm-card{
    width: 80%;
}
}

/*-----------------------------------------PHONE LANDSCAPE MEDIA QUERY-----------------------------------------*/
@media only screen and (max-height: 400px){
#lotr-background{
    background-size:120%;
    background-position-x: -60px;
    background-position-y: 50px;
}

.pagination{
    width:30%;
    display: flex;
    justify-content: center;
}

#searching-nav{
    padding: 10px 20% 0;
}

.sidenav{
    background-color: #182F1A;
}

.sidenav li > a{
    color: #DCAE0B;
}

.film-card{
    width: 60%;
}

.modal-card{
    width: 90%;
    max-height: 60%;
    display: flex;
    overflow: scroll;
}
}

